typescript/checker/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode7.ts.stderr
error: 'eval' and 'arguments' cannot be used as a binding identifier in strict mode
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode7.ts:2:3
  |
2 | ++eval;
  |   ^^^^

error: Cannot assign to this
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode7.ts:2:3
  |
2 | ++eval;
  |   ^^^^

